# moodify

./: .gitignore  LICENSE  Makefile  README.md  app.py  config.json.example  constants.py  fusion.py  pyproject.toml
notebooks/: 01_Speech_Emotion_Recognition.ipynb  02_Face_Emotion_Recognition.ipynb  03_Text_Emotion_Recognition.ipynb
scripts/: split_modalities.py
