[project]
name = "moodify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg>=1.4",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "moviepy>=2.1.2",
    "opencv-python>=4.11.0.86",
    "soundfile>=0.13.1",
    "sox>=1.5.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = [
    "ipyfilechooser>=0.6.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "nbqa[toolchain]>=1.9.1",
    "ruff>=0.9.10",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors
    "W",        # pycodestyle warnings
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "UP",       # pyupgrade
    "ARG001",   # unused arguments in functions
]
ignore = [
    "E501",     # line too long, handled by black
    "B008",     # do not perform function calls in argument defaults
    "W191",     # indentation contains tabs
    "B904",     # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
